fix dark mode

--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ body.dark .nav-icons .icon {
   color: white;
 }
 
-body.dark .products-grids .products-cards {
+body.dark .products-grids .product-card {
   color: white;
   background-color: #222;
 }
@@ -58,29 +58,31 @@ body.dark .filters .filter-group .filter-select {
   border: 1px solid rgb(101, 95, 95);
 }
 
-body.dark .products-cards .products-categorys {
+body.dark .product-card .products-categorys {
   color: white;
 }
-body.dark .products-cards .product-title {
+body.dark .product-card .product-title {
   color: white;
 }
-body.dark .products-cards .product-description {
+body.dark .product-card .product-description {
   color: rgb(192, 174, 174);
 }
-body.dark .products-cards .products-prices {
+body.dark .product-card .products-prices {
   color: rgb(214, 208, 208);
 }
 
-body.dark .products-cards .wishlist-btn {
+body.dark .product-card .wishlist-btn {
   color: rgb(192, 174, 174);
   background-color: #222;
 }
-body.dark .products-cards .add-to-cart {
+body.dark .product-card .add-to-cart {
   color: rgb(192, 174, 174);
   background-color: #222;
   border: 1px solid #3498db;
 }
-
+body.dark .product-card .product-price{
+  color: white;
+}
 /* Navbar container */
 .navbar {
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
@@ -429,7 +431,7 @@ body.dark .products-cards .add-to-cart {
   gap: 25px;
 }
 
-.products-cards {
+.product-card {
   background: white;
   border-radius: 10px;
   overflow: hidden;
@@ -439,18 +441,18 @@ body.dark .products-cards .add-to-cart {
   flex-direction: column;
 }
 
-.products-cards:hover {
+.product-card:hover {
   transform: translateY(-5px);
   box-shadow: 0 10px 20px rgba(0, 0, 0, 0.12);
 }
 
-.products-images {
+.product-image {
   height: 220px;
   overflow: hidden;
   position: relative;
 }
 
-.products-images img {
+.product-image img {
   width: 100%;
   height: 100%;
   object-fit: contain;
